--- a/web/index.html
+++ b/web/index.html
@@ -16,61 +16,6 @@
         <button onclick="envoyer()">Envoyer</button>
 
         <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-        <script>
-            let mess_container = document.getElementById("message_container");
-            var connection;
-
-            var peer = new Peer(undefined, {
-                host: "/",
-                port: 4937,
-                path: "/peerjs/antenna"
-            });
-
-            peer.on('open', function(id) {
-                document.getElementById("disp_id").innerHTML = id;
-            });
-            
-            peer.on('connection', catchCo);
-
-            function connect() {
-                let other_id = document.getElementById("code_input").value;
-
-                var conn = peer.connect(other_id);
-                catchCo(conn)
-            }
-
-            function catchCo(conn) {
-                connection = conn;
-
-                connection.on('open', function() {
-                    let p = document.createElement("p");
-                    p.innerHTML = "Connecté";
-                    mess_container.appendChild(p)
-
-                    connection.on('data', function(data) {
-                        let p = document.createElement("p");
-                        p.innerHTML = "Toi: " + data;
-                        mess_container.appendChild(p)
-
-                        console.log("Toi: " + data)
-                    });
-                });
-            }
-
-            function envoyer() {
-                let textarea = document.getElementById("mess");
-
-                if (connection != undefined) {
-                    connection.send(textarea.value);
-                    let p = document.createElement("p");
-                    p.innerHTML = "Moi: " + textarea.value;
-                    mess_container.appendChild(p)
-
-                    console.log("Moi: " + textarea.value)
-
-                    textarea.value = "";
-                }
-            }
-        </script>
+        <script src="/static/message.js"></script>
     </body>
 </html>
