--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
         <button onclick="envoyer()">Envoyer</button>
 
         <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+        <script src="/static/cryptico.js"></script>
         <script src="/static/message.js"></script>
     </body>
 </html>
