🌟 Gestion du nom d'utilisateur

--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,9 @@
 
         <div id="message_container"></div>
 
+        <input id="username" type="text" placeholder="Nom d'utilisateur"/>
+        <button onclick="changeUsername()">Modifier</button>
+
         <input id="code_input" type="text" />
         <button onclick="connect()">Se connecter</button> 
 
