--- a/web/index.html
+++ b/web/index.html
@@ -25,10 +25,13 @@
                 <textarea id="mess"></textarea>
             </div>
 
-            <div id="option_screen">
+            <div id="option_screen" style="display: none;">
+                <h2>Options</h2>
                 <input id="username" type="text" placeholder="Nom d'utilisateur"/>
                 <button onclick="changeUsername()">Modifier</button>
             </div>
+
+            <img src="/static/cog.svg" id="option_button" />
         </div>
 
         <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
