🌟 Option sur la couleure

--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,9 @@
                 <h2>Options</h2>
                 <input id="username" type="text" placeholder="Nom d'utilisateur"/>
                 <button onclick="changeUsername()">Modifier</button>
+
+                <input id="color" type="color" />
+                <button onclick="changeColor()">Modifier</button>
             </div>
 
             <img src="/static/cog.svg" id="option_button" />
