🌟 Ajout d'un footer

--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,9 @@
                 <button onclick="changeColor()">Modifier</button>
             </div>
 
+            <footer>
+                <p>Outil développé par Bigaston : <a href="https://twitter.com/Bigaston">🐦 Twitter</a> | <a href="https://utip.io/Bigaston">💸 uTip</a> | <a href="https://github.com/Bigaston/antenna">⌨️ Code Source</a></p>
+            </footer>
             <img src="/static/cog.svg" id="option_button" />
         </div>
 
